tests/snapshots/run_wpt_conformance__trtx_clamp_float32_2D_tensor_default_options_maxValue_and_specified_positive_options_minValue.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "clamp.https.any.js",
    "clamp float32 2D tensor default options.maxValue and specified positive options.minValue",
    "trtx",
    "PASS",
)
