tests/snapshots/run_wpt_conformance__trtx_clamp_float32_2D_tensor_specified_options_minValue_0_0_and_positive_options_maxValue.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "clamp.https.any.js",
    "clamp float32 2D tensor specified options.minValue=0.0 and positive options.maxValue",
    "trtx",
    "PASS",
)
